; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/extr_shdma.c_sh_dmae_writel.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/extr_shdma.c_sh_dmae_writel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sh_dmae_chan = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sh_dmae_chan*, i64, i64)* @sh_dmae_writel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sh_dmae_writel(%struct.sh_dmae_chan* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.sh_dmae_chan*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.sh_dmae_chan* %0, %struct.sh_dmae_chan** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = load %struct.sh_dmae_chan*, %struct.sh_dmae_chan** %4, align 8
  %9 = getelementptr inbounds %struct.sh_dmae_chan, %struct.sh_dmae_chan* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @SH_DMAC_CHAN_BASE(i32 %10)
  %12 = load i64, i64* %6, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @ctrl_outl(i64 %7, i64 %13)
  ret void
}

declare dso_local i32 @ctrl_outl(i64, i64) #1

declare dso_local i64 @SH_DMAC_CHAN_BASE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
